[gd_scene load_steps=11 format=2]

[ext_resource path="res://fonts/GrapeSoda.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Stages/Arena/Scripts/Tutorial.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KillTip:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -11.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KillTip:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CaptureTip:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CaptureTip:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle_tips"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KillTip:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -11.1, 25.1, -11.1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KillTip:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.43, 0.905 ), Vector2( 0.921, 1.509 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CaptureTip:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 4.0, -12.1, 16.1, 12.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CaptureTip:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 1.1, 1.2, 1.3, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.097, 0.803 ), Vector2( 0.864, 0.803 ), Vector2( 1.467, 0.951 ), Vector2( 0.789, 1.827 ), Vector2( 1.354, 0.829 ), Vector2( 1, 1 ) ]
}

[node name="Tutorial" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MoveLeft" type="RichTextLabel" parent="."]
margin_left = 1.0
margin_top = 22.0
margin_right = 46.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]<-[/center]"
text = "<-"

[node name="MoveRight" type="RichTextLabel" parent="."]
margin_left = 120.0
margin_top = 23.0
margin_right = 159.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]->[/center]"
text = "->"

[node name="XTutorial" type="RichTextLabel" parent="."]
margin_left = 38.0
margin_top = 5.0
margin_right = 122.0
margin_bottom = 56.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]
[X] to fence
[/center]"
text = "
[X] to fence
"

[node name="ZTutorial" type="RichTextLabel" parent="."]
margin_left = 28.0
margin_top = 39.0
margin_right = 132.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][Z] to boost[/center]"
text = "[Z] to boost"

[node name="KillTip" type="Node2D" parent="."]
visible = false
position = Vector2( 39, 109 )
rotation = -0.193732
__meta__ = {
"_edit_group_": true
}

[node name="Tip" type="RichTextLabel" parent="KillTip"]
modulate = Color( 0.996078, 0.423529, 0.564706, 1 )
margin_left = -42.0
margin_top = -18.0
margin_right = 40.0
margin_bottom = 16.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]Don't Eat the Sheep[/center]"
text = "Don't Eat the Sheep"

[node name="CaptureTip" type="Node2D" parent="."]
visible = false
position = Vector2( 119, 96 )
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="CaptureTip"]
modulate = Color( 0.996078, 0.423529, 0.564706, 1 )
margin_left = -50.0
margin_top = -19.0
margin_right = 51.0
margin_bottom = 19.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]Surround it with a fence[/center]"
text = "Surround it with a fence"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_tips"
anims/RESET = SubResource( 7 )
anims/idle_tips = SubResource( 8 )
